// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Button Group Dimensioni 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <section>
      <div>
        <div
          className="btn-group-lg btn-group"
          role="group"
        >
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Left
          </button>
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Middle
          </button>
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Right
          </button>
        </div>
      </div>
      <div
        className="mt-3"
      >
        <div
          className="btn-group"
          role="group"
        >
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Left
          </button>
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Middle
          </button>
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Right
          </button>
        </div>
      </div>
      <div
        className="mt-3"
      >
        <div
          className="btn-group-sm btn-group"
          role="group"
        >
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Left
          </button>
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Middle
          </button>
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Right
          </button>
        </div>
      </div>
    </section>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Dimensioni.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Button Group Esempi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div
      className="btn-group"
      role="group"
    >
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        Left
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        Middle
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        Right
      </button>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Esempi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Button Group Toolbar 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div
      className="btn-toolbar"
      role="toolbar"
    >
      <div
        className="mr-1 btn-group"
        role="group"
      >
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type={undefined}
        >
          1
        </button>
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type={undefined}
        >
          2
        </button>
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type={undefined}
        >
          3
        </button>
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type={undefined}
        >
          4
        </button>
      </div>
      <div
        className="mr-1 btn-group"
        role="group"
      >
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type={undefined}
        >
          5
        </button>
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type={undefined}
        >
          6
        </button>
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type={undefined}
        >
          7
        </button>
      </div>
      <div
        className="mr-1 btn-group"
        role="group"
      >
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type={undefined}
        >
          8
        </button>
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Toolbar.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Button Group Vertical 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div
      className="btn-group-vertical"
      role="group"
    >
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        Button
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        Button
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        Button
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        Button
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        Button
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        Button
      </button>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Vertical.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Button Group/Nesting Esempi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div
      className="btn-group"
      role="group"
    >
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        1
      </button>
      <button
        className="btn btn-secondary"
        onClick={[Function]}
        type={undefined}
      >
        2
      </button>
      <div
        className="btn-group"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-secondary"
          onClick={[Function]}
          type="button"
        >
          Dropdown
        </button>
        <div
          aria-hidden={true}
          className="dropdown-menu"
          role="menu"
          tabIndex="-1"
        >
          <button
            className="dropdown-item"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            Dropdown Link
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            Dropdown Link
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Nesting.md",
      }
    }
  />
</div>
`;
